--- a/test.html
+++ b/test.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <div class="header">test</div>
 
 </body>
 </html>
