--- a/test.html
+++ b/test.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <style>
+        body {
+            background-image:url("constellations/cryo.png");
+            background-size: 100% auto;
+            background-repeat: no-repeat;
+        }
+    </style>
     <div class="header">test</div>
 
 </body>
