--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="icons/Character_Paimon_Portrait.png">
 </head>
 <body>
     <style>
