icon added + title + tab pic

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Genshin Builder</title>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="icons/Character_Paimon_Portrait.png">
 </head>
@@ -14,7 +14,9 @@
             background-repeat: no-repeat;
         }
     </style>
-    <div class="header">test</div>
+    <div class="header">
+        <li><a href=""><img src="icons/Icon_Inventory.png" title="Builds"></a></li>
+    </div>
 
 </body>
 </html>
