--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
         }
     </style>
     <div class="header">
-        <li><a href=""><img src="icons/Icon_Inventory.png" title="Builds"></a></li>
+        <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory.png" title="Builds"></a></li>
     </div>
 
 </body>
