--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </style>
     <div class="header">
         <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory.png" title="Builds"></a></li>
+        <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
     </div>
 
 </body>
