--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <style>
         body {
-            background-image:url("constellations/cryo.png");
+            background-image:url("wallpaper/wallpaper_main.jpg");
             background-size: 100% auto;
             background-repeat: no-repeat;
         }
