added albedo + changed the head on htmls

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="antaww/xhmyjae">
+    <meta name="description" content="The main page">
     <title>Genshin Builder</title>
+
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="icons/Character_Paimon_Portrait.png">
 </head>
+
 <body>
     <style>
         body {
