--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
             background-repeat: no-repeat;
         }
     </style>
-    <div class="header">
+    <ul class="header">
         <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory.png" title="Builds"></a></li>
         <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
-    </div>
+    </ul>
+
 
 </body>
 </html>
