--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="antaww/xhmyjae">
     <meta name="description" content="The main page">
-    <title>Genshin Builder</title>
+    <title>Build me Paimon</title>
 
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="icons/Character_Paimon_Portrait.png">
@@ -21,6 +21,7 @@
         }
     </style>
     <ul class="header">
+        <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory.png" title="Home"></a></li>
         <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory.png" title="Builds"></a></li>
         <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
     </ul>
