rangements dans des dossiers + début page character

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="antaww/xhmyjae">
     <meta name="description" content="Albedo's complete build">
-    <title>ALbedo le sang</title>
+    <title>Albedo le sang</title>
+
+    <link rel="stylesheet" type="text/css" href="../style/characters.css" />
+
 </head>
 
 <body>
