--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <title>Build me Paimon</title>
 
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="icons/Character_Paimon_Portrait.png">
+    <link rel="icon" href="images/icons/Character_Paimon_Portrait.png">
 </head>
 
 <body>
     <style>
         body {
-            background-image:url("wallpaper/wallpaper_main.jpg");
+            background-image:url("images/wallpaper/wallpaper_main.jpg");
             background-size: 100% auto;
             background-repeat: no-repeat;
         }
     </style>
     <ul class="header">
-        <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory.png" title="Home"></a></li>
-        <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory.png" title="Builds"></a></li>
-        <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
+        <li class="icon_navbar"><a href=""><img src="images/icons/Icon_Inventory.png" title="Home"></a></li>
+        <li class="icon_navbar"><a href=""><img src="images/icons/Icon_Inventory.png" title="Builds"></a></li>
+        <li class="icon_navbar"><a href=""><img src="images/icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
     </ul>
 
 
