--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
     </style>
     <ul class="header">
-        <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory.png" title="Home"></a></li>
+        <li class="icon_navbar"><a href="index.html"><img src="icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
         <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory.png" title="Builds"></a></li>
         <li class="icon_navbar"><a href=""><img src="icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
     </ul>
