--- a/html/albedo.html
+++ b/html/albedo.html
@@ -9,10 +9,14 @@
     <title>Albedo le sang</title>
 
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
+    <link rel="icon" href="../images/icons/Character_Paimon_Portrait.png">
 
 </head>
 
 <body>
+
+<div class="background">
+</div>
 
 </body>
 </html>
