--- a/html/albedo.html
+++ b/html/albedo.html
@@ -9,11 +9,18 @@
     <title>Albedo le sang</title>
 
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
-    <link rel="icon" href="../images/icons/Character_Paimon_Portrait.png">
+    <link rel="stylesheet" type="text/css" href="../style/main.css">
+    <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
 
 </head>
 
 <body>
+
+<ul class="header">
+    <li class="icon_navbar"><a href=""><img src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
+    <li class="icon_navbar"><a href=""><img src="../images/icons/Icon_Inventory.png" title="Builds"></a></li>
+    <li class="icon_navbar"><a href=""><img src="../images/icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
+</ul>
 
 <div class="background">
 </div>
