--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="The main page">
     <title>Build me Paimon</title>
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style/main.css">
     <link rel="icon" href="images/icons/Character_Paimon_Portrait.png">
 </head>
 
