--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
         }
     </style>
     <ul class="header">
-        <li class="icon_navbar"><a href=""><img src="images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
-        <li class="icon_navbar char_icon"><a href=""><img src="images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a>
+        <li class="icon_navbar"><a href="" class="icon_navbar"><img src="images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
+        <li class="icon_navbar char_icon"><a href="" class="icon_navbar"><img src="images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a>
             <div class="characters">
-                <a href="#"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
-                <a href="#"><img src="images/characters/Ganyu_head.png" title="Ganyu"></a>
+                <a href="#" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
+                <a href="#" class="a_icon"><img src="images/characters/Ganyu_head.png" title="Ganyu"></a>
+                <a href="#" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
+                <a href="#" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
+                <a href="#" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
+                <a href="#" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
             </div>
         </li>
-        <li class="icon_navbar"><a href=""><img src="images/icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
+        <li class="icon_navbar"><a href="" class="icon_navbar"><img src="images/icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
     </ul>
 
 </body>
