added albedo picture

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -24,6 +24,9 @@
 
 <div class="background">
 </div>
+<div class="character">
+    <img src="../images/characters/big_albedo.png">
+</div>
 
 </body>
 </html>
