added ganyu + linked the characters from the menu

--- a/html/ganyu.html
+++ b/html/ganyu.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="antaww/xhmyjae">
     <meta name="description" content="Albedo's complete build">
-    <title>Albedo le sang</title>
+    <title>Ganyu la queen</title>
 
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css">
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
-
 </head>
-
 <body>
 
 <ul class="header">
@@ -34,7 +32,7 @@
 <div class="background">
 </div>
 <div class="character">
-    <img src="../images/characters/big_albedo.png">
+    <img src="../images/characters/big_ganyu.png">
 </div>
 
 </body>
