--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <li class="icon_navbar"><a href="" class="icon_navbar"><img src="images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
         <li class="icon_navbar char_icon"><a href="" class="icon_navbar"><img src="images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a>
             <div class="characters">
-                <a href="#" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
-                <a href="#" class="a_icon"><img src="images/characters/Ganyu_head.png" title="Ganyu"></a>
+                <a href="html/albedo.html" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
+                <a href="html/ganyu.html" class="a_icon"><img src="images/characters/Ganyu_head.png" title="Ganyu"></a>
                 <a href="#" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
                 <a href="#" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
                 <a href="#" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
