added characters nav bar

--- a/html/ganyu.html
+++ b/html/ganyu.html
@@ -10,9 +10,12 @@
 
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css">
+    <link rel="stylesheet" type="text/css" href="../style/charactersNavBar.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
+    <script src="../script/charaNavBar.js"></script>
+
 </head>
-<body>
+<body class="albedo">
 
 <ul class="header">
     <li class="icon_navbar"><a href="../index.html" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
@@ -20,10 +23,6 @@
         <div class="characters">
             <a href="albedo.html" class="a_icon"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
             <a href="ganyu.html" class="a_icon"><img src="../images/characters/Ganyu_head.png" title="Ganyu"></a>
-            <a href="#" class="a_icon"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
-            <a href="#" class="a_icon"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
-            <a href="#" class="a_icon"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
-            <a href="#" class="a_icon"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
         </div>
     </li>
     <li class="icon_navbar"><a href="" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
@@ -31,9 +30,20 @@
 
 <div class="background">
 </div>
+
 <div class="character">
     <img src="../images/characters/big_ganyu.png">
 </div>
 
+<div class="content">
+    <div class="weapons"></div>
+    <div class="artefacts"></div>
+    <div class="materials"></div>
+    <div class="talents"></div>
+    <div class="constellations"></div>
+    <div class="lore"></div>
+</div>
+
+<script src="../script/charaNavBar.js"></script>
 </body>
 </html>
