added the main menu to all pages + changed the js file

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -18,16 +18,37 @@
 
 <body class="albedo">
 
-    <ul class="header">
-        <li class="icon_navbar"><a href="../index.html" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
-        <li class="icon_navbar char_icon"><a href="" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a>
+    <nav class="navigation">
+        <ul class="header">
+            <li class="icon_navbar"><a href="" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
+            <li class="icon_navbar char_icon"><a href="" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a></li>
             <div class="characters">
-                <a href="albedo.html" class="a_icon"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
-                <a href="ganyu.html" class="a_icon"><img src="../images/characters/Ganyu_head.png" title="Ganyu"></a>
+                <a href="../html/albedo.html" class="a_icon"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
+                <a href="../html/aloy.html" class="a_icon"><img src="../images/characters/Aloy_head.png" title="Aloy"></a>
+                <a href="../html/amber.html" class="a_icon"><img src="../images/characters/Amber_head.png" title="Amber"></a>
+                <a href="../html/barbara.html" class="a_icon"><img src="../images/characters/Barbara_head.png" title="Barbara"></a>
+                <a href="../html/beidou.html" class="a_icon"><img src="../images/characters/Beidou_head.png" title="Beidou"></a>
+                <a href="../html/bennett.html" class="a_icon"><img src="../images/characters/Bennett_head.png" title="Bennett"></a>
+                <a href="../html/chongyun.html" class="a_icon"><img src="../images/characters/Chongyun_head.png" title="Chongyun"></a>
+                <a href="../html/diluc.html" class="a_icon"><img src="../images/characters/Diluc_head.png" title="Diluc"></a>
+                <a href="../html/diona.html" class="a_icon"><img src="../images/characters/Diona_head.png" title="Diona"></a>
+                <a href="../html/eula.html" class="a_icon"><img src="../images/characters/Eula_head.png" title="Eula"></a>
+                <a href="../html/fischl.html" class="a_icon"><img src="../images/characters/Fischl_head.png" title="Fischl"></a>
+                <a href="../html/ganyu.html" class="a_icon"><img src="../images/characters/Ganyu_head.png" title="Ganyu"></a>
+                <a href="../html/hutao.html" class="a_icon"><img src="../images/characters/Hu%20Tao_head.png" title="Hu Tao"></a>
+                <a href="../html/jean.html" class="a_icon"><img src="../images/characters/Jean_head.png" title="Jean"></a>
+                <a href="../html/kazuha.html" class="a_icon"><img src="../images/characters/Kazuha_head.png" title="Kaedehara Kazuha"></a>
+                <a href="../html/kaeya.html" class="a_icon"><img src="../images/characters/Kaeya_head.png" title="Kaeya"></a>
+                <a href="../html/ayaka.html" class="a_icon"><img src="../images/characters/Ayaka_head.png" title="Kamisato Ayaka"></a>
+                <a href="../html/keqing.html" class="a_icon"><img src="../images/characters/Keqing_head.png" title="Keqing"></a>
+                <a href="../html/klee.html" class="a_icon"><img src="../images/characters/Klee_head.png" title="Klee"></a>
+                <a href="../html/sara.html" class="a_icon"><img src="../images/characters/Sara_head.png" title="Kujou Sara"></a>
+                <a href="../html/lisa.html" class="a_icon"><img src="../images/characters/Lisa_head.png" title="Lisa"></a>
+                <a href="../html/mona.html" class="a_icon"><img src="../images/characters/Mona_head.png" title="Mona"></a>
             </div>
-        </li>
-        <li class="icon_navbar"><a href="" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
-    </ul>
+            <li class="icon_navbar"><a href="" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
+        </ul>
+    </nav>
 
     <div class="background">
     </div>
@@ -36,15 +57,15 @@
         <img src="../images/characters/big_albedo.png">
     </div>
 
-    <div class="content">
+    <div id="content">
+        <div class="lore">Albedo — an alchemist based in Mondstadt, in the service of the Knights of Favonius. "Genius," "Kreideprinz," or "Captain of the Investigation Team"... Such titles and honors are of no consequence to him when there is so much more research to conduct. The pursuit of fortune and connections cannot hold a candle to his heart's desire — acquiring the limitless, obscure knowledge left behind by previous generations of scholars.</div>
         <div class="weapons"></div>
         <div class="artefacts"></div>
         <div class="materials"></div>
         <div class="talents"></div>
         <div class="constellations"></div>
-        <div class="lore"></div>
+        <script src="../script/charaNavBar.js"></script>
     </div>
 
-    <script src="../script/charaNavBar.js"></script>
 </body>
 </html>
