updated the chara_navbar

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -20,7 +20,7 @@
 
     <nav class="navigation">
         <ul class="header">
-            <li class="icon_navbar"><a href="" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
+            <li class="icon_navbar"><a href="../index.html" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
             <li class="icon_navbar char_icon"><a href="" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a></li>
             <div class="characters">
                 <a href="../html/albedo.html" class="a_icon"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
@@ -58,12 +58,14 @@
     </div>
 
     <div id="content">
-        <div class="lore">Albedo — an alchemist based in Mondstadt, in the service of the Knights of Favonius. "Genius," "Kreideprinz," or "Captain of the Investigation Team"... Such titles and honors are of no consequence to him when there is so much more research to conduct. The pursuit of fortune and connections cannot hold a candle to his heart's desire — acquiring the limitless, obscure knowledge left behind by previous generations of scholars.</div>
-        <div class="weapons"></div>
-        <div class="artefacts"></div>
-        <div class="materials"></div>
-        <div class="talents"></div>
-        <div class="constellations"></div>
+        <div id="text">
+            <div class="lore">Albedo — an alchemist based in Mondstadt, in the service of the Knights of Favonius. "Genius," "Kreideprinz," or "Captain of the Investigation Team"... Such titles and honors are of no consequence to him when there is so much more research to conduct. The pursuit of fortune and connections cannot hold a candle to his heart's desire — acquiring the limitless, obscure knowledge left behind by previous generations of scholars.</div>
+            <div class="weapons"></div>
+            <div class="artefacts"></div>
+            <div class="materials"></div>
+            <div class="talents"></div>
+            <div class="constellations"></div>
+        </div>
         <script src="../script/charaNavBar.js"></script>
     </div>
 
