--- a/html/ganyu.html
+++ b/html/ganyu.html
@@ -19,7 +19,7 @@
 
     <nav class="navigation">
         <ul class="header">
-            <li class="icon_navbar"><a href="" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
+            <li class="icon_navbar"><a href="../index.html" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
             <li class="icon_navbar char_icon"><a href="" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a></li>
             <div class="characters">
                 <a href="../html/albedo.html" class="a_icon"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
