linked others to ganyu

--- a/html/ganyu.html
+++ b/html/ganyu.html
@@ -44,6 +44,27 @@
                 <a href="../html/sara.html" class="a_icon"><img src="../images/characters/Sara_head.png" title="Kujou Sara"></a>
                 <a href="../html/lisa.html" class="a_icon"><img src="../images/characters/Lisa_head.png" title="Lisa"></a>
                 <a href="../html/mona.html" class="a_icon"><img src="../images/characters/Mona_head.png" title="Mona"></a>
+                <a href="../html/ningguang.html" class="a_icon"><img src="../images/characters/Ningguang_head.png" title="Ningguang"></a>
+                <a href="../html/noelle.html" class="a_icon"><img src="../images/characters/Noelle_head.png" title="Noelle"></a>
+                <a href="../html/qiqi.html" class="a_icon"><img src="../images/characters/Qiqi_head.png" title="Qiqi"></a>
+                <a href="../html/raiden.html" class="a_icon"><img src="../images/characters/Raiden_head.png" title="Raiden Shogun"></a>
+                <a href="../html/razor.html" class="a_icon"><img src="../images/characters/Razor_head.png" title="Razor"></a>
+                <a href="../html/rosaria.html" class="a_icon"><img src="../images/characters/Rosaria_head.png" title="Rosaria"></a>
+                <a href="../html/kokomi.html" class="a_icon"><img src="../images/characters/Kokomi_head.png" title="Sangonomiya Kokomi"></a>
+                <a href="../html/sayu.html" class="a_icon"><img src="../images/characters/Sayu_head.png" title="Sayu"></a>
+                <a href="../html/sucrose.html" class="a_icon"><img src="../images/characters/Sucrose_head.png" title="Sucrose"></a>
+                <a href="../html/tartaglia.html" class="a_icon"><img src="../images/characters/Tartaglia_head.png" title="Tartaglia"></a>
+                <a href="../html/thoma.html" class="a_icon"><img src="../images/characters/Thoma_head.png" title="Thoma"></a>
+                <a href="../html/traveler.html" class="a_icon"><img src="../images/characters/Traveler%20(Electro)_head.png" title="Traveler"></a>
+                <!--                add element variation for traveler when click ("which element ? -electro/geo/anemo = new html)-->
+                <a href="../html/venti.html" class="a_icon"><img src="../images/characters/Venti_head.png" title="Venti"></a>
+                <a href="../html/xiangling.html" class="a_icon"><img src="../images/characters/Xiangling_head.png" title="Xiangling"></a>
+                <a href="../html/xiao.html" class="a_icon"><img src="../images/characters/Xiao_head.png" title="Xiao"></a>
+                <a href="../html/xingqiu.html" class="a_icon"><img src="../images/characters/Xingqiu_head.png" title="Xingqiu"></a>
+                <a href="../html/xinyan.html" class="a_icon"><img src="../images/characters/Xinyan_head.png" title="Xinyan"></a>
+                <a href="../html/yanfei.html" class="a_icon"><img src="../images/characters/Yanfei_head.png" title="Yanfei"></a>
+                <a href="../html/yoimiya.html" class="a_icon"><img src="../images/characters/Yoimiya_head.png" title="Yoimiya"></a>
+                <a href="../html/zhongli.html" class="a_icon"><img src="../images/characters/Zhongli_head.png" title="Zhongli"></a>
             </div>
             <li class="icon_navbar"><a href="" class="icon_navbar"><img src="../images/icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
         </ul>
