added lore to current characters

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css">
     <link rel="stylesheet" type="text/css" href="../style/charactersNavBar.css" />
+    <link rel="stylesheet" type="text/css" href="../style/content.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
     <script src="../script/charaNavBar.js"></script>
 
