--- a/html/aloy.html
+++ b/html/aloy.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css">
     <link rel="stylesheet" type="text/css" href="../style/charactersNavBar.css" />
+    <link rel="stylesheet" type="text/css" href="../style/content.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
     <script src="../script/charaNavBar.js"></script>
 
@@ -80,9 +81,11 @@
 
     <div id="content">
         <div id="text">
-            <div class="lore">Lore needed ! :)<br>
-                lore2<br>
-                lore3</div>
+            <div class="lore">An outcast since birth, Aloy grew up in a harsh mountain wilderness near the tribe that shunned her. Fostered by an expert hunter, she trained to hunt with cat-like grace and deadly accuracy – but the things she most wanted to learn, he could not teach her. Most of all, she burned to know the circumstances of her birth – who her parents were, and why she was shunned by the tribe.<br>
+                Her quest for answers swept her into a wider and more dangerous world than she ever could have imagined. She encountered strange and powerful new tribes, ancient ruins rife with mysteries, and dangerous enemies, both human and machine.<br>
+                Eventually she learned that her origins and destiny were deeply tied to the fate of the world itself, and fought an epic battle to save it against the evil forces of an artificial intelligence from the ancient past.<br>
+                She thought that this would be the end of her journey. But there is always more to an adventurer's tale. She has now come to Teyvat in search of a new challenges.<br>
+                In this brave new world, Aloy is ready for the hunt!</div>
             <div class="weapons"></div>
             <div class="artefacts"></div>
             <div class="materials"></div>
