--- a/html/barbara.html
+++ b/html/barbara.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css">
     <link rel="stylesheet" type="text/css" href="../style/charactersNavBar.css" />
+    <link rel="stylesheet" type="text/css" href="../style/content.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
     <script src="../script/charaNavBar.js"></script>
 
@@ -80,9 +81,7 @@
 
     <div id="content">
         <div id="text">
-            <div class="lore">Lore needed ! :)<br>
-                lore2<br>
-                lore3</div>
+            <div class="lore">The Deaconess of the Favonius Church and a shining starlet adored by all. Although the concept of a starlet is rather novel in a city of bards, the people of Mondstadt love Barbara nonetheless. "I owe everything to the city's spirit of freedom" — Barbara, regarding her popularity.</div>
             <div class="weapons"></div>
             <div class="artefacts"></div>
             <div class="materials"></div>
