--- a/html/ganyu.html
+++ b/html/ganyu.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css">
     <link rel="stylesheet" type="text/css" href="../style/charactersNavBar.css" />
+    <link rel="stylesheet" type="text/css" href="../style/content.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
     <script src="../script/charaNavBar.js"></script>
 
@@ -78,14 +79,20 @@
     </div>
 
     <div id="content">
-        <div class="lore"></div>
-        <div class="weapons"></div>
-        <div class="artefacts"></div>
-        <div class="materials"></div>
-        <div class="talents"></div>
-        <div class="constellations"></div>
+        <div id="text">
+            <div class="lore">The secretary to the Liyue Qixing. The blood of both human and illuminated beast flows within her veins.<br>
+                Graceful and quiet by nature, yet the gentle disposition of qilin sees not even the slightest conflict with even the most arduous of workloads.<br>
+                After all, Ganyu firmly believes that all the work she does is in honor of her contract with Rex Lapis, seeking the well-being of all living things within Liyue.</div>
+            <div class="weapons"></div>
+            <div class="artefacts"></div>
+            <div class="materials"></div>
+            <div class="talents"></div>
+            <div class="constellations"></div>
+        </div>
+        <script src="../script/charaNavBar.js"></script>
     </div>
 
-    <script src="../script/charaNavBar.js"></script>
+    <div class="name"><span>Ganyu</span></div>
+
 </body>
 </html>
