--- a/html/hutao.html
+++ b/html/hutao.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css">
     <link rel="stylesheet" type="text/css" href="../style/charactersNavBar.css" />
+    <link rel="stylesheet" type="text/css" href="../style/content.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
     <script src="../script/charaNavBar.js"></script>
 
@@ -80,9 +81,9 @@
 
     <div id="content">
         <div id="text">
-            <div class="lore">Lore needed ! :)<br>
-                lore2<br>
-                lore3</div>
+            <div class="lore">Hu Tao is the 77th Director of the Wangsheng Funeral Parlor, a person vital to managing Liyue's funerary affairs.<br>
+                She does her utmost to flawlessly carry out a person's last rites and preserve the world's balance of yin and yang.<br>
+                Aside from this, she is also a talented poet whose many "masterpieces" have passed around Liyue's populace by word of mouth.</div>
             <div class="weapons"></div>
             <div class="artefacts"></div>
             <div class="materials"></div>
