--- a/html/zhongli.html
+++ b/html/zhongli.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css">
     <link rel="stylesheet" type="text/css" href="../style/charactersNavBar.css" />
+    <link rel="stylesheet" type="text/css" href="../style/content.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
     <script src="../script/charaNavBar.js"></script>
 
@@ -80,9 +81,8 @@
 
     <div id="content">
         <div id="text">
-            <div class="lore">Lore needed ! :)<br>
-                lore2<br>
-                lore3</div>
+            <div class="lore">Wangsheng Funeral Parlor's mysterious consultant. Handsome, elegant, and surpassingly learned.<br>
+                Though no one knows where Zhongli is from, he is a master of courtesy and rules. From his seat at Wangsheng Funeral Parlor, he performs all manner of rituals.</div>
             <div class="weapons"></div>
             <div class="artefacts"></div>
             <div class="materials"></div>
