--- a/html/rosaria.html
+++ b/html/rosaria.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css">
     <link rel="stylesheet" type="text/css" href="../style/charactersNavBar.css" />
+    <link rel="stylesheet" type="text/css" href="../style/content.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
     <script src="../script/charaNavBar.js"></script>
 
@@ -80,9 +81,9 @@
 
     <div id="content">
         <div id="text">
-            <div class="lore">Lore needed ! :)<br>
-                lore2<br>
-                lore3</div>
+            <div class="lore">Rosaria, a sister in Mondstadt's Church of Favonius.<br>
+                A sister of the church, though you wouldn't know it if it weren't for her attire. An unusual woman with sharp, piercing words and a cold manner.<br>
+                Her movements are unpredictable. She often leaves without notifying anyone. She acts with some kind of purpose, but others don't seem to know exactly what she stands for...</div>
             <div class="weapons"></div>
             <div class="artefacts"></div>
             <div class="materials"></div>
