--- a/html/yoimiya.html
+++ b/html/yoimiya.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css">
     <link rel="stylesheet" type="text/css" href="../style/charactersNavBar.css" />
+    <link rel="stylesheet" type="text/css" href="../style/content.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
     <script src="../script/charaNavBar.js"></script>
 
@@ -80,9 +81,8 @@
 
     <div id="content">
         <div id="text">
-            <div class="lore">Lore needed ! :)<br>
-                lore2<br>
-                lore3</div>
+            <div class="lore">A talented pyrotechnician. The current owner of Naganohara Fireworks known as the "Queen of the Summer Festival."<br>
+                A girl filled with fiery passion. The uncompromising childish innocence and the obsession with craftsmanship intertwine in her to create a spectacular blaze.</div>
             <div class="weapons"></div>
             <div class="artefacts"></div>
             <div class="materials"></div>
