--- a/html/albedo.html
+++ b/html/albedo.html
@@ -84,7 +84,13 @@
             <div class="lore">Albedo — an alchemist based in Mondstadt, in the service of the Knights of Favonius.<br>
                 "Genius," "Kreideprinz," or "Captain of the Investigation Team"... Such titles and honors are of no consequence to him when there is so much more research to conduct.<br>
                 The pursuit of fortune and connections cannot hold a candle to his heart's desire — acquiring the limitless, obscure knowledge left behind by previous generations of scholars.</div>
-            <div class="weapons"></div>
+            <div class="weaponsContent">
+                <img src="../images/weapons/cinnabar.png" class="weapon weapons4">
+                <div>
+                    <span class="weaponsName">Cinnabar Spindle</span>
+                    <span class="weaponsText">Elemental Skill DMG is increased by 40/50/60/70/80% of DEF. The effect will be triggered no more than once every 1.5s and will be cleared 0.1s after the Elemental Skill deals DMG.</span>
+                </div>
+               </div>
             <div class="artefacts"></div>
             <div class="materials"></div>
             <div class="talents"></div>
