--- a/html/albedo.html
+++ b/html/albedo.html
@@ -90,8 +90,8 @@
                     <span class="weaponsName">Cinnabar Spindle</span>
                     <span class="weaponsText">Elemental Skill DMG is increased by 40/50/60/70/80% of DEF. The effect will be triggered no more than once every 1.5s and will be cleared 0.1s after the Elemental Skill deals DMG.</span>
                 </div>
-               </div>
-            <div class="artefacts"></div>
+            </div>
+            <div class="artifacts"></div>
             <div class="materials"></div>
             <div class="talents"></div>
             <div class="constellations"></div>
