resized 9 characters, new splashes hd

--- a/html/hutao.html
+++ b/html/hutao.html
@@ -75,7 +75,7 @@
     <div class="background">
     </div>
 
-    <div class="character">
+    <div class="character resized">
         <img src="../images/characters/big_hutao.png">
     </div>
 
