--- a/html/rosaria.html
+++ b/html/rosaria.html
@@ -75,7 +75,7 @@
     <div class="background">
     </div>
 
-    <div class="character">
+    <div class="character resized_toobig">
         <img src="../images/characters/big_rosaria.png">
     </div>
 
