--- a/html/yanfei.html
+++ b/html/yanfei.html
@@ -75,7 +75,7 @@
     <div class="background">
     </div>
 
-    <div class="character">
+    <div class="character resized yanfei_box">
         <img src="../images/characters/big_yanfei.png">
     </div>
 
