--- a/html/albedo.html
+++ b/html/albedo.html
@@ -83,23 +83,76 @@
         <div id="text">
             <div class="lore">Albedo — an alchemist based in Mondstadt, in the service of the Knights of Favonius.<br>
                 "Genius," "Kreideprinz," or "Captain of the Investigation Team"... Such titles and honors are of no consequence to him when there is so much more research to conduct.<br>
-                The pursuit of fortune and connections cannot hold a candle to his heart's desire — acquiring the limitless, obscure knowledge left behind by previous generations of scholars.</div>
+                The pursuit of fortune and connections cannot hold a candle to his heart's desire — acquiring the limitless, obscure knowledge left behind by previous generations of scholars.
+            </div>
+
             <div class="weaponsContent">
-                <img src="../images/weapons/cinnabar.png" class="weapon weapons4">
+                <img src="../images/weapons/cinnabar.png" class="weapon rare4">
                 <div>
                     <span class="weaponsName">Cinnabar Spindle</span>
                     <span class="weaponsText">Elemental Skill DMG is increased by 40/50/60/70/80% of DEF. The effect will be triggered no more than once every 1.5s and will be cleared 0.1s after the Elemental Skill deals DMG.</span>
                 </div>
             </div>
-            <div class="artifacts"></div>
-            <div class="materials"></div>
+
+            <div class="artifacts">
+                <img src="../images/artefacts/husk.png" class="artifact rare5">
+                <div>
+                    <span class="artifactsName">Husk of Opulent Dreams (x4)</span>
+                    <span class="artifactsText">- DEF +30% <br>- A character equipped with this Artifact set will obtain the Curiosity effect in the following conditions: When on the field, the character gains 1 stack after hitting an opponent with a Geo attack, triggering a maximum of once every 0.3s. When off the field, the character gains 1 stack every 3s. Curiosity can stack up to 4 times, each providing 6% DEF and a 6% Geo DMG Bonus. When 6 seconds pass without gaining a Curiosity stack, 1 stack is lost.</span>
+                </div>
+            </div>
+
+            <div class="materials">
+                <span class="ascension">Ascension</span>
+                <div>
+                    <img src="../images/materials/topaz1.png" class="material rare2">
+                    <span class="materialsName">Prithiva Topaz Sliver (x1)</span>
+                </div>
+                <div>
+                    <img src="../images/materials/topaz2.png" class="material rare2">
+                    <span class="materialsName">Prithiva Topaz Fragment (x9)</span>
+                </div>
+                <div>
+                    <img src="../images/materials/topaz3.png" class="material rare2">
+                    <span class="materialsName">Prithiva Topaz Chunk (x9)</span>
+                </div>
+                <div>
+                    <img src="../images/materials/topaz4.png" class="material rare2">
+                    <span class="materialsName">Prithiva Topaz Gemstone (x6)</span>
+                </div>
+                <div>
+                    <img src="../images/materials/basalt.png" class="material rare2">
+                    <span class="materialsName">Basalt Pillar (x46)</span>
+                </div>
+                <div>
+                    <img src="../images/materials/cecilia.png" class="material rare2">
+                    <span class="materialsName">Cecilia (x168)</span>
+                </div>
+                <div>
+                    <img src="../images/materials/divining.png" class="material rare2">
+                    <span class="materialsName">Divining Scroll (x18)</span>
+                </div>
+                <div>
+                    <img src="../images/materials/sealed.png" class="material rare2">
+                    <span class="materialsName">Sealed Scroll (x30)</span>
+                </div>
+                <div>
+                    <img src="../images/materials/forbidden.png" class="material rare2">
+                    <span class="materialsName">Forbidden Curse Scroll (x36)</span>
+                </div>
+            </div>
+
             <div class="talents"></div>
+
             <div class="constellations"></div>
+
         </div>
         <script src="../script/charaNavBar.js"></script>
     </div>
 
     <div class="name"><span>Albedo</span></div>
+
+    <footer>tttt</footer>
 
 </body>
 </html>
