--- a/html/albedo.html
+++ b/html/albedo.html
@@ -95,6 +95,10 @@
             </div>
 
             <div class="artifacts">
+                <div class="page">
+                    <img src="../images/icons/page_checked.png">
+                    <img src="../images/icons/page.png">
+                </div>
                 <img src="../images/artefacts/husk.png" class="artifact rare5">
                 <div>
                     <span class="artifactsName">Husk of Opulent Dreams (x4)</span>
@@ -103,6 +107,10 @@
             </div>
 
             <div class="materials">
+                <div class="page">
+                    <img src="../images/icons/page_checked.png">
+                    <img src="../images/icons/page.png">
+                </div>
                 <span class="ascension">Ascension</span>
                 <div>
                     <img src="../images/materials/topaz1.png" class="material rare2">
@@ -142,7 +150,14 @@
                 </div>
             </div>
 
-            <div class="talents"></div>
+            <div class="talents">
+                <div class="page">
+                    <img src="../images/icons/page_checked.png">
+                    <img src="../images/icons/page.png">
+                    <img src="../images/icons/page.png">
+                    <img src="../images/icons/page.png">
+                </div>
+            </div>
 
             <div class="constellations"></div>
 
