character isnt fixed on screen anymore

--- a/html/hutao.html
+++ b/html/hutao.html
@@ -75,7 +75,7 @@
     <div class="background">
     </div>
 
-    <div class="character resized">
+    <div class="character hutao_box">
         <img src="../images/characters/big_hutao.png">
     </div>
 
