--- a/html/kazuha.html
+++ b/html/kazuha.html
@@ -75,7 +75,7 @@
     <div class="background">
     </div>
 
-    <div class="character resized">
+    <div class="character kazuha_box">
         <img src="../images/characters/big_kazuha.png">
     </div>
 
