commented the footer

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -167,7 +167,7 @@
 
     <div class="name"><span>Albedo</span></div>
 
-    <footer>tttt</footer>
+<!--    <footer>tttt</footer>-->
 
 </body>
 </html>
