changed the content buttons

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../style/content.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
     <script src="../script/charaNavBar.js"></script>
+    <script src="../script/switchContent.js"></script>
 
 </head>
 
@@ -96,8 +97,8 @@
 
             <div class="artifacts">
                 <div class="page">
-                    <img src="../images/icons/page_checked.png">
-                    <img src="../images/icons/page.png">
+                    <img src="../images/icons/page_checked.png" id="b1">
+                    <img src="../images/icons/page.png" id="b2">
                 </div>
                 <img src="../images/artefacts/husk.png" class="artifact rare5">
                 <div>
@@ -108,8 +109,8 @@
 
             <div class="materials">
                 <div class="page">
-                    <img src="../images/icons/page_checked.png">
-                    <img src="../images/icons/page.png">
+                    <img src="../images/icons/page_checked.png" id="b3">
+                    <img src="../images/icons/page.png" id="b4">
                 </div>
                 <span class="ascension">Ascension</span>
                 <div>
@@ -152,10 +153,10 @@
 
             <div class="talents">
                 <div class="page">
-                    <img src="../images/icons/page_checked.png">
-                    <img src="../images/icons/page.png">
-                    <img src="../images/icons/page.png">
-                    <img src="../images/icons/page.png">
+                    <img src="../images/icons/page_checked.png" id="b5">
+                    <img src="../images/icons/page.png" id="b6">
+                    <img src="../images/icons/page.png" id="b7">
+                    <img src="../images/icons/page.png" id="b8">
                 </div>
             </div>
 
