--- a/html/albedo.html
+++ b/html/albedo.html
@@ -100,10 +100,18 @@
                     <img src="../images/icons/page_checked.png" id="b1">
                     <img src="../images/icons/page.png" id="b2">
                 </div>
-                <img src="../images/artefacts/husk.png" class="artifact rare5">
-                <div>
-                    <span class="artifactsName">Husk of Opulent Dreams (x4)</span>
-                    <span class="artifactsText">- DEF +30% <br>- A character equipped with this Artifact set will obtain the Curiosity effect in the following conditions: When on the field, the character gains 1 stack after hitting an opponent with a Geo attack, triggering a maximum of once every 0.3s. When off the field, the character gains 1 stack every 3s. Curiosity can stack up to 4 times, each providing 6% DEF and a 6% Geo DMG Bonus. When 6 seconds pass without gaining a Curiosity stack, 1 stack is lost.</span>
+                <div class="artifacts_set1">
+                    <img src="../images/artefacts/husk.png" class="artifact rare5">
+                    <div>
+                        <span class="artifactsName">Husk of Opulent Dreams (x4)</span>
+                        <span class="artifactsText">- DEF +30% <br>- A character equipped with this Artifact set will obtain the Curiosity effect in the following conditions: When on the field, the character gains 1 stack after hitting an opponent with a Geo attack, triggering a maximum of once every 0.3s. When off the field, the character gains 1 stack every 3s. Curiosity can stack up to 4 times, each providing 6% DEF and a 6% Geo DMG Bonus. When 6 seconds pass without gaining a Curiosity stack, 1 stack is lost.</span>
+                    </div>
+                </div>
+                <div class="artifacts_set2">
+                    <img src="../images/artefacts/archaic.png" class="artifact rare5">
+                    <div>
+                        <span class="artifactsName">Archaic (x2)</span>
+                    </div>
                 </div>
             </div>
 
