content change working on artifacts

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -111,10 +111,11 @@
                     <img src="../images/artefacts/archaic.png" class="artifact rare5">
                     <div>
                         <span class="artifactsName">Archaic (x2)</span>
+                        <span class="artifactsText">- DEF +30% <br> is lost.</span>
                     </div>
                 </div>
             </div>
-
+            
             <div class="materials">
                 <div class="page">
                     <img src="../images/icons/page_checked.png" id="b3">
