--- a/html/albedo.html
+++ b/html/albedo.html
@@ -88,10 +88,12 @@
             </div>
 
             <div class="weaponsContent">
-                <img src="../images/weapons/cinnabar.png" class="weapon rare4">
                 <div>
-                    <span class="weaponsName">Cinnabar Spindle</span>
-                    <span class="weaponsText">Elemental Skill DMG is increased by 40/50/60/70/80% of DEF. The effect will be triggered no more than once every 1.5s and will be cleared 0.1s after the Elemental Skill deals DMG.</span>
+                    <img src="../images/weapons/cinnabar.png" class="weapon rare4">
+                    <div>
+                        <span class="weaponsName">Cinnabar Spindle</span>
+                        <span class="weaponsText">Elemental Skill DMG is increased by 40/50/60/70/80% of DEF. The effect will be triggered no more than once every 1.5s and will be cleared 0.1s after the Elemental Skill deals DMG.</span>
+                    </div>
                 </div>
             </div>
 
