artifacts text lil edit + gorou & itto (need better face icon

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 <a href="html/eula.html" class="a_icon"><img src="images/characters/Eula_head.png" title="Eula"></a>
                 <a href="html/fischl.html" class="a_icon"><img src="images/characters/Fischl_head.png" title="Fischl"></a>
                 <a href="html/ganyu.html" class="a_icon"><img src="images/characters/Ganyu_head.png" title="Ganyu"></a>
+                <a href="html/gorou.html" class="a_icon"><img src="images/characters/Gorou_head.png" title="Gorou"></a>
                 <a href="html/hutao.html" class="a_icon"><img src="images/characters/Hu%20Tao_head.png" title="Hu Tao"></a>
+                <a href="html/itto.html" class="a_icon"><img src="images/characters/Itto_head.png" title="Itto"></a>
                 <a href="html/jean.html" class="a_icon"><img src="images/characters/Jean_head.png" title="Jean"></a>
                 <a href="html/kazuha.html" class="a_icon"><img src="images/characters/Kazuha_head.png" title="Kaedehara Kazuha"></a>
                 <a href="html/kaeya.html" class="a_icon"><img src="images/characters/Kaeya_head.png" title="Kaeya"></a>
