--- a/html/gorou.html
+++ b/html/gorou.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="antaww/xhmyjae">
-    <meta name="description" content="Albedo's complete build">
-    <title>Albedo le sang</title>
+    <meta name="description" content="Gorou's complete build">
+    <title>Gorou le sang</title>
 
     <link rel="stylesheet" type="text/css" href="../style/characters.css" />
     <link rel="stylesheet" type="text/css" href="../style/main.css">
@@ -14,11 +14,10 @@
     <link rel="stylesheet" type="text/css" href="../style/content.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
     <script src="../script/charaNavBar.js"></script>
-    <script src="../script/switchContent.js"></script>
 
 </head>
 
-<body class="albedo">
+<body class="gorou">
 
     <nav class="navigation">
         <ul class="header">
@@ -77,126 +76,23 @@
     </div>
 
     <div class="character">
-        <img src="../images/characters/big_albedo.png">
+        <img src="../images/characters/big_gorou.png">
     </div>
 
     <div id="content">
         <div id="text">
-            <div class="lore">Albedo — an alchemist based in Mondstadt, in the service of the Knights of Favonius.<br>
-                "Genius," "Kreideprinz," or "Captain of the Investigation Team"... Such titles and honors are of no consequence to him when there is so much more research to conduct.<br>
-                The pursuit of fortune and connections cannot hold a candle to his heart's desire — acquiring the limitless, obscure knowledge left behind by previous generations of scholars.
-            </div>
-
-            <div class="weaponsContent">
-                <div>
-                    <img src="../images/weapons/cinnabar.png" class="weapon rare4">
-                    <div>
-                        <span class="weaponsName">Cinnabar Spindle</span>
-                        <span class="weaponsText">Elemental Skill DMG is increased by 40/50/60/70/80% of DEF. The effect will be triggered no more than once every 1.5s and will be cleared 0.1s after the Elemental Skill deals DMG.</span>
-                    </div>
+            <div class="lore"><br>
                 </div>
-            </div>
-
-            <div class="artifacts">
-                <div class="page">
-                    <img src="../images/icons/page_checked.png" id="b1">
-                    <img src="../images/icons/page.png" id="b2">
-                </div>
-                <div class="artifacts_set1">
-                    <div>
-                        <img src="../images/artefacts/husk.png" class="artifact rare5">
-                        <div>
-                            <span class="artifactsName">Husk of Opulent Dreams (x4)</span>
-                            <span class="artifactsText">- DEF +30%
-                                <br>- Get curiosity effect in the following conditions: When on the field, the character
-                                gains 1 stack after hitting an opponent with a Geo attack, triggering a maximum of once every 0.3s.
-                                When off the field, the character gains 1 stack every 3s. Curiosity can stack up to 4 times, each
-                                providing 6% DEF and a 6% Geo DMG Bonus. When 6 seconds pass without gaining a Curiosity stack, 1
-                                stack is lost.
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="artifacts_set2">
-                    <div>
-                        <img src="../images/artefacts/archaic.png" class="artifact rare5">
-                        <div>
-                            <span class="artifactsName">Archaic Petra (x2)</span>
-                            <span class="artifactsText">- Geo DMG Bonus +15%.</span>
-                        </div>
-                    </div>
-                    <div>
-                        <img src="../images/artefacts/noblesse.png" class="artifact rare5">
-                        <div>
-                            <span class="artifactsName">Noblesse Oblige (x2)</span>
-                            <span class="artifactsText">- Elemental Burst DMG +20%.</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="materials">
-                <div class="page">
-                    <img src="../images/icons/page_checked.png" id="b3">
-                    <img src="../images/icons/page.png" id="b4">
-                </div>
-                <span class="ascension">Ascension</span>
-                <div>
-                    <img src="../images/materials/topaz1.png" class="material rare2">
-                    <span class="materialsName">Prithiva Topaz Sliver (x1)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/topaz2.png" class="material rare2">
-                    <span class="materialsName">Prithiva Topaz Fragment (x9)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/topaz3.png" class="material rare2">
-                    <span class="materialsName">Prithiva Topaz Chunk (x9)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/topaz4.png" class="material rare2">
-                    <span class="materialsName">Prithiva Topaz Gemstone (x6)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/basalt.png" class="material rare2">
-                    <span class="materialsName">Basalt Pillar (x46)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/cecilia.png" class="material rare2">
-                    <span class="materialsName">Cecilia (x168)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/divining.png" class="material rare2">
-                    <span class="materialsName">Divining Scroll (x18)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/sealed.png" class="material rare2">
-                    <span class="materialsName">Sealed Scroll (x30)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/forbidden.png" class="material rare2">
-                    <span class="materialsName">Forbidden Curse Scroll (x36)</span>
-                </div>
-            </div>
-
-            <div class="talents">
-                <div class="page">
-                    <img src="../images/icons/page_checked.png" id="b5">
-                    <img src="../images/icons/page.png" id="b6">
-                    <img src="../images/icons/page.png" id="b7">
-                    <img src="../images/icons/page.png" id="b8">
-                </div>
-            </div>
-
+            <div class="weapons"></div>
+            <div class="artefacts"></div>
+            <div class="materials"></div>
+            <div class="talents"></div>
             <div class="constellations"></div>
-
         </div>
         <script src="../script/charaNavBar.js"></script>
     </div>
 
-    <div class="name"><span>Albedo</span></div>
-
-<!--    <footer>tttt</footer>-->
+    <div class="name"><span>Gorou</span></div>
 
 </body>
 </html>
